# raycaster_engine

./: '  CMakeLists.txt  README.md  ]  mapcoordinate.txt
.cache/clangd/index/: SDLapp.cpp.B1ADF01A6D2829F4.idx  SDLapp.h.DC7BD6950E98BF4D.idx  background.cpp.664207787DFCF1CC.idx  background.h.566C415EC99FFF68.idx  colorsettings.cpp.A11DE0881ECC3047.idx  colorsettings.h.595BAF185ACE66DE.idx  enemy.cpp.8ECDC88141BC0557.idx  enemy.h.0F78C55281F32361.idx  entity.cpp.5B2788531C8B45EE.idx  entity.h.6B778D5A877725CB.idx  game.cpp.5EBEC7A5446F33C4.idx  game.h.DEBBD6C6866E4A69.idx  glad.c.CD138A207AC53881.idx  main.cpp.80619BA4F458A2E5.idx  map.cpp.008CD25839C58F41.idx  map.h.96E27AF55DE15C5B.idx  maprenderer.cpp.97A4B0ABB1515C02.idx  maprenderer.h.E5DD9C4A8D8E5602.idx  player.cpp.A69C7AB90B97CA5B.idx  player.h.D1C0B29A2B76444D.idx  playerrenderer.cpp.78711A5638D49406.idx  playerrenderer.h.E392ABE9E8F6EF29.idx  ray.cpp.822A82E60B7C621B.idx  ray.h.293A95FA6B9D2FAD.idx  rayrenderer.cpp.63A0F752D63567AD.idx  rayrenderer.h.3ADB20D7A353A624.idx  renderer.cpp.09A3F1FD8290DB12.idx  renderer.h.4DF1A2E9358D6300.idx  shader.cpp.0809AF5508690283.idx  shader.h.E6FE0F1531A8FA1F.idx  sound.cpp.25BDB61D80CCABC0.idx  sound.h.102C5DB60200CE5C.idx  stb_image.cpp.2950628D9749DBF1.idx  stb_image.h.450373E1F70C6AF8.idx  texture.cpp.4A6E34AE94BDE6CF.idx  texture.h.502B5CD5821A1E56.idx
art_inspiration/: FONTS.aseprite  byte-sized.aseprite  byte-sized_fine.aseprite  float_logo.aseprite
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  main
images/: revolver-250x250.lpe  revolver-cock-500x500.lpe  revolver-idle-500x500.lpe  revolver-project-500x500.lpe  revolver-shot-250x250.lpe  revolver-shot-500x500.lpe
include/: SDLapp.h  background.h  colorsettings.h  command.h  enemy.h  entity.h  game.h  input_handler.h  map.h  maprenderer.h  move_command.h  player.h  playerrenderer.h  ray.h  rayrenderer.h  renderer.h  shader.h  sound.h  texture.h
src/: 3  SDLapp.cpp  a.out  background.cpp  colorsettings.cpp  enemy.cpp  entity.cpp  fmodtest.cpp  game.cpp  glad.c  input_handler.cpp  main.cpp  map.cpp  maprenderer.cpp  move_command.cpp  player.cpp  playerrenderer.cpp  ray.cpp  rayrenderer.cpp  renderer.cpp  shader.cpp  sound.cpp
src/shaders/: map.vs  player.frag  player.vs  ray.frag  ray.vs  sprite.frag
